--- a/phyiscs_network/approximate_a_function_test.ipynb
+++ b/phyiscs_network/approximate_a_function_test.ipynb
@@ -9,8 +9,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "f=x^2 + \\sqrt {y} + z\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 704,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 705,
    "metadata": {},
    "outputs": [
     {
@@ -149,13 +159,13 @@
        "[574 rows x 4 columns]"
       ]
      },
-     "execution_count": 586,
+     "execution_count": 705,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"result_testdata.csv\", delimiter=\",\")\n",
+    "df = pd.read_csv(\"data/result_testdata.csv\", delimiter=\",\")\n",
     "df"
    ]
   },
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 706,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 707,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 708,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 709,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +232,7 @@
        "torch.Size([574, 3])"
       ]
      },
-     "execution_count": 590,
+     "execution_count": 709,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 710,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +252,7 @@
        "torch.Size([574, 1])"
       ]
      },
-     "execution_count": 591,
+     "execution_count": 710,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 711,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 712,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +886,7 @@
        "        [1.6601]])"
       ]
      },
-     "execution_count": 593,
+     "execution_count": 712,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,23 +897,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 713,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished epoch 0, latest loss 0.03893100470304489\n",
-      "Finished epoch 1, latest loss 0.00971320178359747\n",
-      "Finished epoch 2, latest loss 0.005221494939178228\n",
-      "Finished epoch 3, latest loss 0.004688470624387264\n",
-      "Finished epoch 4, latest loss 0.0041638631373643875\n",
-      "Finished epoch 5, latest loss 0.003627225523814559\n",
-      "Finished epoch 6, latest loss 0.0026280786842107773\n",
-      "Finished epoch 7, latest loss 0.001826498773880303\n",
-      "Finished epoch 8, latest loss 0.0013636208605021238\n",
-      "Finished epoch 9, latest loss 0.0010666153393685818\n"
+      "tensor([[0.8763, 0.0872, 0.6783],\n",
+      "        [0.5065, 0.4278, 0.1179],\n",
+      "        [0.4692, 0.2089, 0.8624],\n",
+      "        [0.9976, 0.0390, 0.6284],\n",
+      "        [0.6801, 0.4327, 0.5710],\n",
+      "        [0.5288, 0.2589, 0.6544],\n",
+      "        [0.7432, 0.7144, 0.2645],\n",
+      "        [0.3437, 0.6037, 0.3529],\n",
+      "        [0.1806, 0.1608, 0.3050],\n",
+      "        [0.9655, 0.0042, 0.8323]], grad_fn=<CloneBackward0>)\n",
+      "tensor([[1.7414],\n",
+      "        [1.0286],\n",
+      "        [1.5397],\n",
+      "        [1.8211],\n",
+      "        [1.6914],\n",
+      "        [1.4429],\n",
+      "        [1.6620],\n",
+      "        [1.2481],\n",
+      "        [0.7386],\n",
+      "        [1.8292]])\n",
+      "tensor([[1.7439],\n",
+      "        [1.0362],\n",
+      "        [1.5405],\n",
+      "        [1.8132],\n",
+      "        [1.6917],\n",
+      "        [1.4408],\n",
+      "        [1.6610],\n",
+      "        [1.2499],\n",
+      "        [0.7446],\n",
+      "        [1.8582]], grad_fn=<AddmmBackward0>)\n",
+      "tensor([[1.8583, 2.2220, 1.0891],\n",
+      "        [0.9633, 0.7823, 0.8988],\n",
+      "        [0.9722, 1.1291, 0.9991],\n",
+      "        [1.8605, 2.1592, 0.9840],\n",
+      "        [1.2633, 0.7933, 0.9584],\n",
+      "        [1.0643, 0.8607, 0.9742],\n",
+      "        [1.5625, 0.5973, 1.0075],\n",
+      "        [0.6865, 0.6707, 0.9928],\n",
+      "        [0.3151, 1.4962, 1.0178],\n",
+      "        [1.8225, 4.0894, 0.8112]], grad_fn=<TBackward0>)\n",
+      "Finished epoch 499, latest loss 0.00010145383566850796\n"
      ]
     }
    ],
@@ -911,34 +952,38 @@
     "loss_fn = nn.MSELoss()  # binary cross entropy\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "n_epochs = 10\n",
+    "n_epochs = 500\n",
     "batch_size = 10\n",
     "\n",
     "for epoch in range(n_epochs):\n",
     "    for i in range(0, len(X), batch_size):\n",
     "        Xbatch = X[i:i+batch_size].clone()\n",
-    "        Xbatch.requires_grad=True\n",
+    "        # Xbatch.requires_grad=True\n",
     "        y_pred = model(Xbatch)\n",
-    "        f_x_t = autograd.grad(y_pred,Xbatch,torch.ones([Xbatch.shape[0], 1]), retain_graph=True, create_graph=True)[0] #first derivative\n",
-    "        print(f_x_t)\n",
     "        ybatch = y[i:i+batch_size]\n",
+    "        f_x_t = autograd.grad(y_pred,Xbatch,torch.ones([Xbatch.shape[0], 1]), retain_graph=True, create_graph=True)[0] #first derivative\n",
     "        loss = loss_fn(y_pred, ybatch)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    print(f'Finished epoch {epoch}, latest loss {loss}')"
+    "        if epoch==n_epochs-1 and i==0:\n",
+    "            print(Xbatch)\n",
+    "            print(ybatch)\n",
+    "            print(y_pred)\n",
+    "            print(f_x_t)\n",
+    "            print(f'Finished epoch {epoch}, latest loss {loss}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 714,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Score: 0.02 RMSE\n"
+      "Train Score: 0.01 RMSE\n"
      ]
     }
    ],
@@ -956,8 +1001,32 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test the Auto Gradient\n",
+    "\n",
+    "$$\n",
+    "f=x^2 + \\sqrt {y} + z\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "f_x'=2x\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "f_y'=\\frac{1}{2} * y ^ {-\\frac{1}{2}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "f_z'=1\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 596,
+   "execution_count": 715,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +1035,7 @@
        "tensor([0.8763, 0.0872, 0.6783], grad_fn=<SelectBackward0>)"
       ]
      },
-     "execution_count": 596,
+     "execution_count": 715,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 597,
+   "execution_count": 716,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +1055,7 @@
        "tensor([1.7414])"
       ]
      },
-     "execution_count": 597,
+     "execution_count": 716,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,16 +1066,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 725,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1.7134], grad_fn=<AddBackward0>)"
+       "tensor([1.7590], grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 598,
+     "execution_count": 725,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,112 +1086,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 724,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0367, -0.0537, -0.0499],\n",
-       "        [ 0.0605,  0.0329,  0.0393],\n",
-       "        [ 0.0316,  0.0133,  0.0243],\n",
-       "        ...,\n",
-       "        [ 0.0196,  0.0099,  0.0098],\n",
-       "        [ 0.1228,  0.0827,  0.1127],\n",
-       "        [ 0.0626,  0.0519,  0.0711]])"
+       "tensor([1.8718, 2.0428, 1.0036], grad_fn=<SelectBackward0>)"
       ]
      },
-     "execution_count": 599,
+     "execution_count": 724,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X.grad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 600,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1.)"
-      ]
-     },
-     "execution_count": 600,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "loss.grad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 601,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "grad can be implicitly created only for scalar outputs",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m/Users/xiaokeai/Documents/GitHub/PINNs/phyiscs_network/approximate_a_function_test.ipynb Cell 20\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/xiaokeai/Documents/GitHub/PINNs/phyiscs_network/approximate_a_function_test.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(model(X)\u001b[39m.\u001b[39;49mbackward())\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    478\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    479\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    480\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    485\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[1;32m    486\u001b[0m     )\n\u001b[0;32m--> 487\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[1;32m    488\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[1;32m    489\u001b[0m )\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/autograd/__init__.py:190\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    186\u001b[0m inputs \u001b[39m=\u001b[39m (inputs,) \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(inputs, torch\u001b[39m.\u001b[39mTensor) \u001b[39melse\u001b[39;00m \\\n\u001b[1;32m    187\u001b[0m     \u001b[39mtuple\u001b[39m(inputs) \u001b[39mif\u001b[39;00m inputs \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m \u001b[39mtuple\u001b[39m()\n\u001b[1;32m    189\u001b[0m grad_tensors_ \u001b[39m=\u001b[39m _tensor_or_tensors_to_tuple(grad_tensors, \u001b[39mlen\u001b[39m(tensors))\n\u001b[0;32m--> 190\u001b[0m grad_tensors_ \u001b[39m=\u001b[39m _make_grads(tensors, grad_tensors_, is_grads_batched\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[1;32m    191\u001b[0m \u001b[39mif\u001b[39;00m retain_graph \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    192\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/autograd/__init__.py:85\u001b[0m, in \u001b[0;36m_make_grads\u001b[0;34m(outputs, grads, is_grads_batched)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[39mif\u001b[39;00m out\u001b[39m.\u001b[39mrequires_grad:\n\u001b[1;32m     84\u001b[0m     \u001b[39mif\u001b[39;00m out\u001b[39m.\u001b[39mnumel() \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m---> 85\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mgrad can be implicitly created only for scalar outputs\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     86\u001b[0m     new_grads\u001b[39m.\u001b[39mappend(torch\u001b[39m.\u001b[39mones_like(out, memory_format\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mpreserve_format))\n\u001b[1;32m     87\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: grad can be implicitly created only for scalar outputs"
-     ]
-    }
-   ],
-   "source": [
-    "print(model(X).backward())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(y.grad_fn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "grad can be implicitly created only for scalar outputs",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m/Users/xiaokeai/Documents/GitHub/PINNs/phyiscs_network/approximate_a_function_test.ipynb Cell 20\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/xiaokeai/Documents/GitHub/PINNs/phyiscs_network/approximate_a_function_test.ipynb#X24sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m grads \u001b[39m=\u001b[39m autograd\u001b[39m.\u001b[39;49mgrad(outputs\u001b[39m=\u001b[39;49mX, inputs\u001b[39m=\u001b[39;49my, create_graph\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/autograd/__init__.py:285\u001b[0m, in \u001b[0;36mgrad\u001b[0;34m(outputs, inputs, grad_outputs, retain_graph, create_graph, only_inputs, allow_unused, is_grads_batched)\u001b[0m\n\u001b[1;32m    280\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\u001b[39m\"\u001b[39m\u001b[39monly_inputs argument is deprecated and is ignored now \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    281\u001b[0m                   \u001b[39m\"\u001b[39m\u001b[39m(defaults to True). To accumulate gradient for other \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m                   \u001b[39m\"\u001b[39m\u001b[39mparts of the graph, please use torch.autograd.backward.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    284\u001b[0m grad_outputs_ \u001b[39m=\u001b[39m _tensor_or_tensors_to_tuple(grad_outputs, \u001b[39mlen\u001b[39m(t_outputs))\n\u001b[0;32m--> 285\u001b[0m grad_outputs_ \u001b[39m=\u001b[39m _make_grads(t_outputs, grad_outputs_, is_grads_batched\u001b[39m=\u001b[39;49mis_grads_batched)\n\u001b[1;32m    287\u001b[0m \u001b[39mif\u001b[39;00m retain_graph \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    288\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/torch/autograd/__init__.py:85\u001b[0m, in \u001b[0;36m_make_grads\u001b[0;34m(outputs, grads, is_grads_batched)\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[39mif\u001b[39;00m out\u001b[39m.\u001b[39mrequires_grad:\n\u001b[1;32m     84\u001b[0m     \u001b[39mif\u001b[39;00m out\u001b[39m.\u001b[39mnumel() \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m---> 85\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mgrad can be implicitly created only for scalar outputs\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     86\u001b[0m     new_grads\u001b[39m.\u001b[39mappend(torch\u001b[39m.\u001b[39mones_like(out, memory_format\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mpreserve_format))\n\u001b[1;32m     87\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: grad can be implicitly created only for scalar outputs"
-     ]
-    }
-   ],
-   "source": [
-    "grads = autograd.grad(outputs=y, inputs=X, torch.ones([X.shape[0], 1]),retain_graph=True, create_graph=True)"
+    "autograd.grad(model(X),X,torch.ones([X.shape[0], 1]), retain_graph=True, create_graph=True)[0][0] #first derivative"
    ]
   }
  ],
