--- a/phyiscs_network/approximate_a_function_test.ipynb
+++ b/phyiscs_network/approximate_a_function_test.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "import the data"
+    "# import the data"
    ]
   },
   {
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "build the network"
+    "# build the network"
    ]
   },
   {
@@ -1005,8 +1005,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "test the Auto Gradient\n",
-    "\n",
+    "# test the auto gradient"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
     "f=x^2 + \\sqrt {y} + z\n",
     "$$\n",
