--- a/phyiscs_network/approximate_a_function_test.ipynb
+++ b/phyiscs_network/approximate_a_function_test.ipynb
@@ -516,6 +516,14 @@
    "source": [
     "autograd.grad(model(X),X,torch.ones([X.shape[0], 1]), retain_graph=True, create_graph=True)[0][0] #first derivative"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "good match!"
+   ]
   }
  ],
  "metadata": {
