--- a/phyiscs_network/synthetic_data_find_the_best_match_function_among_all_functions.ipynb
+++ b/phyiscs_network/synthetic_data_find_the_best_match_function_among_all_functions.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# import the data"
+    "# formula bank"
    ]
   },
   {
@@ -15,6 +15,18 @@
    "source": [
     "$$\n",
     "f=x^2 + \\sqrt {y} + z\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "f=x^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "f=x^2 + y^3 + z\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "f=y^2 + z^2\n",
     "$$"
    ]
   },
